.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Case_Event_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Incap311__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Default_Correspondence_Code__c</fullName>
        <label>Default Correspondence Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incap311__Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incap311__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Service Request Create</fullName>
                    <default>true</default>
                    <label>Service Request Create</label>
                </value>
                <value>
                    <fullName>Service Request Update</fullName>
                </value>
                <value>
                    <fullName>Service Request Close</fullName>
                </value>
                <value>
                    <fullName>Service Activity Update</fullName>
                </value>
                <value>
                    <fullName>Service Activity Complete</fullName>
                </value>
                <value>
                    <fullName>Service Request Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Case Event Setting</label>
    <pluralLabel>Case Event Settings</pluralLabel>
</CustomObject>